# MedicalVolumeRenderer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  create  createbuild  createbuild.sh  runbuild  runbuild.sh
backend/: CMakeLists.txt
backend/glad/: glad.cpp  glad.hpp
backend/include/: Camera.h  DataLoader.h  Renderer.h  VTKRenderer.h  VTKVolumeData.h  VolumeData.h  tinycolormap.h
backend/shaders/: bbox.frag  bbox.vert  slice.frag  slice.vert  vol.frag  vol.vert  vol_fullscreen.frag  vol_fullscreen.vert
backend/src/: Camera.cpp  DICOMLoader.cpp  NIFTILoader.cpp  Renderer.cpp  VTKRenderer.cpp  main.cpp
bindings/src/: main.cpp  renderer_bindings.cpp
frontend/: main.py  opengl_widget.py  run  simple.py  simple_slicer.py  test.py  test_nifti.py
releases/: readme.md  run.sh
test_py_files/: simple_renderer.py  test.py  test_dicom.py  test_pyqt.py
